# xad-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
examples/: fixed_rate_bond.rs  fx_option.rs  hessian.rs  jacobian.rs  swap_pricer.rs
src/: forward_tape.rs  lib.rs  math.rs  registry.rs  scalar.rs  tape.rs
src/forward/: dual.rs  dual2.rs  dual2vec.rs  freal.rs  mod.rs
src/ops/: hessian.rs  jacobian.rs  mod.rs
src/reverse/: areal.rs  mod.rs
tests/: dual2vec_analytical.rs  dual2vec_finance.rs  integration_tests.rs  named_areal.rs  named_dual.rs  named_dual2.rs  named_forward_tape.rs  named_freal.rs  named_hessian.rs  named_jacobian.rs  named_registry.rs
